[project]
name = "pycaniuse"
dynamic = ["version"]
description = "Query caniuse.com from the terminal"
authors = [{ name = "Visesh Prasad", email = "viseshrprasad@gmail.com" }]
readme = "README.md"
keywords = ["python"]
requires-python = ">=3.10,<4.0"
dependencies = [
    "click>=8.1.1",
    "rich>=13.7.0",
    "justhtml>=0.1.5",
    "httpx>=0.27.0",
    "textual>=7.5.0",
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/viseshrp/pycaniuse"
Repository = "https://github.com/viseshrp/pycaniuse"
Documentation = "https://github.com/viseshrp/pycaniuse/blob/main/README.md"
Changelog = "https://github.com/viseshrp/pycaniuse/blob/main/CHANGELOG.md"
Bug-Tracker = "https://github.com/viseshrp/pycaniuse/issues"
CI = "https://github.com/viseshrp/pycaniuse/actions"

[project.scripts]
caniuse = "caniuse.__main__:main"

[dependency-groups]
dev = [
    "ipdb",
    "uv>=0.9.6",
    "tox",
    "tox-uv",
    "tox-gh-actions",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "black",
    "ruff",
    "pip-audit",
    "bandit[toml]",
    "codespell",
    "ty",
    "vulture",
    "deptry",
    "cogapp",
    "twine",
    "hatch",
    "virtualenv>=20.36.1",
    "filelock>=3.20.3",
]

[build-system]
requires = ["hatchling", "hatch-timestamp-version"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "caniuse/_version.py"
source = "vcs-dev-timestamp"
validate-bump = true

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
timestamp_format = "long"

[tool.hatch.build]
include = [
  "caniuse/**",
  "README.md",
  "LICENSE",
  "CHANGELOG.md"
]

[tool.hatch.build.targets.wheel]
packages = ["caniuse"]

[tool.hatch.build.targets.editable]
packages = ["caniuse"]

[tool.hatch.envs.default]
path = ".venv"

[tool.uv]
default-groups = "all"

[tool.ty.src]
include = [
    "caniuse"
]

[tool.ty.environment]
python-version = "3.9"

[tool.ty.analysis]
allowed-unresolved-imports = ["**"]

[tool.ty.rules]
unused-type-ignore-comment = "error"

[tool.pytest.ini_options]
tmp_path_retention_policy = "failed"
testpaths = ["tests"]
addopts = "--capture=tee-sys --tb=native -p no:warnings -ra -vv"
markers = [
    "integration:Run integration tests",
    "smoke:Run the smoke tests",
    "unit:Run the unit tests",
    "canary:Live caniuse.com HTML structure check (networked)",
]
norecursedirs = [
    ".git",
    ".idea",
]
filterwarnings = [
    "ignore:.+:DeprecationWarning"
]

# Configuration for coverage.py
[tool.coverage.report]
show_missing = true
skip_covered = true
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.run]
branch = true
omit = ["caniuse/__main__.py"]
source = [
    "caniuse"
]

[tool.coverage.html]
show_contexts = true

[tool.ruff]
target-version = "py310"
line-length = 100
fix = true
unsafe-fixes = true
exclude = [".venv", "__init__.py"]

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort (keep this if you want Ruff to sort imports)
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pep8-naming rules
    "N",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff-native rules
    "RUF",
    # try/except linting
    "TRY",
    # Disallow print statements
    "T201",
]
ignore = [
    "C901", # Function is too complex
    "PGH003" # blanket-type-ignore
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"scripts/*.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["caniuse", "tests"]
force-sort-within-sections = true

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.codespell]
ignore-words = "codespell.txt"
skip = '*.pyc,*.xml,*.gif,*.png,*.jpg,*.js,*.html,*.json,*.gz,Makefile'
quiet-level = 3

[tool.bandit]
targets = ["caniuse"]
exclude_dirs = ["venv", ".venv", "tests"]

[tool.vulture]
paths = ["caniuse", "tests"]
min_confidence = 80
sort_by_size = true
exclude = ["venv/", ".venv/"]

[tool.deptry]
exclude = ["venv/.*", ".venv/.*", ".tox/.*", "tests/.*"]

[tool.pre-commit.default_language_versions]
python = "3.13"
